--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -52,6 +52,10 @@ h1{
     border-radius: 5px;
     border: none;
 }
+/* .btn:hover{ */
+    /* background-color: blue; */
+    /* color: white; */
+}
 /* main style */
 main{
     max-width: 1140px;
@@ -61,15 +65,19 @@ main{
     display: flex;
     justify-content: space-evenly;
     margin-top: 80px;
-    
-    
-    
-   
 }
 .regular{
     font-weight: 100;
+    /* font-size: 24px; */
     /* width: 40%; */
-    
+}
+.primary{
+   align-items: center;
+   justify-content: center;
+}
+.primary-class{
+    border-radius: 50px;
+    /* align-items: center; */
 }
 .section{
     padding: 62px;
@@ -120,19 +128,21 @@ h1{
 }
 /* footer style */
 footer{
-    text-align: center;
+    text-align: center; 
+    background-color: #FFFFFF;
+    padding: 50px 50px;
 }
 footer h1,.Users-section h1 {
      color: #4E47FF; 
 }
-footer ul li{
+footer  li{
     list-style: none;
     margin-right: 50px;
     text-align: center;
-    justify-content: space-between;
+    justify-content: space-around;
+    display: inline;
 }
-footer ul{
-    display: flex;
-}
+
+
 
 
