--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -27,36 +27,43 @@ nav{
     justify-content: space-between;
     margin: 0 150px;
 }
+
+.logo {
+    font-size: 42px;
+}
 /* Banner style */
-h1{
+.banner-title{
     color: #252432;
     font-weight: bold;
     font-size: 45px;
-   
 }
 .banner{
     text-align: center;
-}
-
-.banner{
     align-items: center;
     padding: 150px 250px;
 }
-/*
+
+
 /* shared style */
 .primary-btn{
     background-color: #4E47FF;
     font-weight: 16;
     color: #FFFFFF;
-    padding: 5px 10px;
+    padding: 10px 10px;
     border-radius: 5px;
-    border: none;
+    border: 1px solid #4E47FF;
 }
-/* .btn:hover{ */
-    /* background-color: blue; */
-    /* color: white; */
+
+.primary-btn:hover {
+    background-color: #E4E6FF;
+    font-weight: 16;
+    color: #4E47FF;
+    padding: 10px 10px;
+    border-radius: 5px;
+    border: 1px solid #E4E6FF;
+    transition: 0.5s;
 }
-/* main style */
+
 main{
     max-width: 1140px;
     margin: 0 auto;
@@ -71,61 +78,111 @@ main{
     /* font-size: 24px; */
     /* width: 40%; */
 }
+
 .primary{
    align-items: center;
    justify-content: center;
 }
+
 .primary-class{
     border-radius: 50px;
     /* align-items: center; */
 }
+
 .section{
     padding: 62px;
 }
+
 .img-wc{
     border-radius: 50px;
     height: 250px;
     width: 300px;
 }
+
 .productive{
    text-align: center;
    background-color: rgba(78, 71, 255, 0.1);
+   border-radius: 15px;
    padding: 10px;
    margin: 40px 0;
-}
-.Users-section{
-    display: flex;
-    /* text-align: center; */
-    justify-content: space-evenly;
-    
-}
-/* touch style */
-.touch{
-    padding: 130px 230px;
-    display: flex;
-    gap: 100px;
-}
-.touch-column{
-    width: 50%;
-}
-.touch input[type="text"],footer input[type="email"],footer textarea{
-    height: 64px;
-    border-radius: 5px;
-    background-color: white;
-    display: block;
-    width: 100%;
-    padding: 10px 20px;
-    margin-bottom: 24px;
-    border: none;
 
 }
-h1{
-    font-weight: 800;
+.Users-section{
+    font-weight: bolder;
+    display: flex;
+    /* text-align: center; */
+    justify-content: center;
+    gap: 90px;
+    
 }
-.touch button{
+.active-user {
+    font-size: 55px;
+}
+.users-sub {
+    font-size: 20px;
+    color: #888787;
+}
+
+/* ready section */
+
+.ready-section {
+    padding: 30px;
+    background-color: #FFFFFF;
+    border-radius: 15px;
+    text-align: center;
+    margin-top: 60px;
+}
+
+.ready {
+    text-align: center;
+    >h1  {
+        font-size: 42px;
+    }>p {
+        font-size: 20px;
+        color: #777777;
+        padding-bottom: 5px;
+    }
+}
+
+.img-ready {
+        background-size: cover;
+        border-radius: 50px;
+        margin-top: 20px;
+    }
+
+/* touch style */
+.form {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 60px 0;
+    padding: 30px;
     width: 100%;
-    padding: 10px 20px;
 }
+
+.form-title {
+    font-size: 70px;
+}
+input, textarea {
+    background-color: white;
+    padding: 10px;
+    border: none;
+    width: 100%;
+    border: 1px solid rgb(236, 232, 232);
+    margin-bottom: 10px;
+}
+
+label {
+    color: black;
+    padding: 5px 0;
+    font-size: 14px;
+    font-weight: 200;
+    margin-bottom: 10px;
+}
+
+.full-width {
+    width: 100%;
+}
+
 /* footer style */
 footer{
     text-align: center; 
